@@ -1234,7 +1234,7 @@ $_LANG['Specified date conflicts with invoice number!'] = 'Podana data nie jest 
 $_LANG['Specified domain contains forbidden characters!'] = 'Domena zawiera niepoprawne znaki ustawiam!';
 $_LANG['Specified e-mail isn\'t correct!'] = 'Wybrany email nie jest poprawny!';
 $_LANG['Specified gateway address does not match with network address!'] = 'Określony adres bramy nie pokrywa się z adresem sieci!';
-$_LANG['Specified ID is not proper or does not exist.'] = 'Wybrany identyfikator jest niepoprawny, lub nie istnieje.';
+$_LANG['Specified ID is not proper or does not exist!'] = 'Podany identyfikator jest niepoprawny lub nie istnieje!';
 $_LANG['Specified IP address does not overlap with any network!'] = 'Wybrany adres IP nie pokrywa się z żadną siecią!';
 $_LANG['Specified IP address is in use!'] = 'Wybrany adres IP jest już w użyciu!';
 $_LANG['Specified IP address is network gateway!'] = 'Wybrany adres IP jest adresem bramy!';
